--- a/System.Robot/System.Robot.csproj
+++ b/System.Robot/System.Robot.csproj
@@ -21,9 +21,19 @@
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Include="macos.os" >
+    <EmbeddedResource Include="macos.os">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Clicks\" />
+    <Folder Include="OSX\" />
+    <Folder Include="Linux\" />
+    <Folder Include="Windows\" />
+    <Folder Include="Clicks\OSX\" />
+    <Folder Include="Clicks\Linux\" />
+    <Folder Include="Clicks\Windows\" />
+    <Folder Include="Extenstions\" />
+  </ItemGroup>
 </Project>
