Refactor and Implementing Get Mouse Position

--- a/System.Robot/Source/macos/robot/Makefile
+++ b/System.Robot/Source/macos/robot/Makefile
@@ -1,5 +1,5 @@
 CC=gcc -shared
-FRAMEWORKS:= -framework Foundation -framework Cocoa #-framework IOKit
+FRAMEWORKS:= -framework Foundation -framework Cocoa# -framework AppKit
 SOURCE=main.mm
 OUT=-o ../../../macos.os
 all:
