--- a/System.Robot/System.Robot.csproj
+++ b/System.Robot/System.Robot.csproj
@@ -34,6 +34,6 @@
     <Folder Include="Clicks\OSX\" />
     <Folder Include="Clicks\Linux\" />
     <Folder Include="Clicks\Windows\" />
-    <Folder Include="Extenstions\" />
+    <Folder Include="Extensions\" />
   </ItemGroup>
 </Project>
