Renaming project to Desktop.Robot

--- a/.github/workflows/build-test-publish.yml
+++ b/.github/workflows/build-test-publish.yml
@@ -27,21 +27,21 @@ jobs:
 
     - name: Build
       run: |
-        cd System.Robot
+        cd Desktop.Robot
         dotnet build --configuration Release --no-restore
 
     - name: Pack
       run: |  
-          cd System.Robot
+          cd Desktop.Robot
           dotnet pack -c Release -o out  
 
-    - name: Push System.Robot to GitHub registry
+    - name: Push Desktop.Robot to GitHub registry
       run: |
         dotnet nuget sources add -name "GPR" -Source https://nuget.pkg.github.com/lucassklp/index.json -Username lucassklp -Password ${{ secrets.GITHUB_TOKEN }}
-        dotnet nuget push ./System.Robot/out/*.nupkg --skip-duplicate
+        dotnet nuget push ./Desktop.Robot/out/*.nupkg --skip-duplicate
 
-    - name: Publish System.Robot to nuget.org
+    - name: Publish Desktop.Robot to nuget.org
       uses: brandedoutcast/publish-nuget@v2.5.5
       with:
-          PROJECT_FILE_PATH: System.Robot/System.Robot.csproj
+          PROJECT_FILE_PATH: Desktop.Robot/Desktop.Robot.csproj
           NUGET_KEY: ${{secrets.NUGET_API_KEY}}
