--- a/Desktop.Robot/Desktop.Robot.csproj
+++ b/Desktop.Robot/Desktop.Robot.csproj
@@ -17,7 +17,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="System.Drawing.Common" Version="5.0.0" />
+    <PackageReference Include="System.Drawing.Common" Version="5.0.2" />
+    <PackageReference Include="System.Reactive" Version="5.0.0" />
   </ItemGroup>
 
   <ItemGroup>
@@ -31,6 +32,5 @@
     <Folder Include="Linux\" />
     <Folder Include="Windows\" />
     <Folder Include="Clicks\Linux\" />
-    <Folder Include="Extensions\" />
   </ItemGroup>
 </Project>
