--- a/Desktop.Robot/Desktop.Robot.csproj
+++ b/Desktop.Robot/Desktop.Robot.csproj
@@ -22,7 +22,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Include="macos.os" Pack="true">
+    <EmbeddedResource Include="osx.os" Pack="true">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </EmbeddedResource>
+  </ItemGroup>
+
+    <ItemGroup>
+    <EmbeddedResource Include="x11.os" Pack="true">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
   </ItemGroup>
