--- a/.github/workflows/build-and-test-develop.yml
+++ b/.github/workflows/build-and-test-develop.yml
@@ -2,9 +2,9 @@ name: Build and Test (Develop)
 
 on:
   push:
-    branches: [ develop ]
-  pull_request:
-    branches: [ develop ]
+    branches:
+      - '*'
+      - '!main'
 
 jobs:
   build:
@@ -19,5 +19,4 @@ jobs:
       run: dotnet restore
     - name: Build
       run: dotnet build --configuration Release --no-restore
-    # - name: Test
-    #   run: dotnet test --no-restore --verbosity normal
+
