added the new osx file in build

--- a/Desktop.Robot/Desktop.Robot.csproj
+++ b/Desktop.Robot/Desktop.Robot.csproj
@@ -22,6 +22,11 @@
   </ItemGroup>
 
   <ItemGroup>
+	<None Include="osx.os">
+		<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		<PackagePath>build\</PackagePath>
+		<Pack>true</Pack>
+	</None>
     <None Include="x11.os">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <PackagePath>build\</PackagePath>
