--- a/Desktop.Robot/Desktop.Robot.csproj
+++ b/Desktop.Robot/Desktop.Robot.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-    <Version>1.4.0</Version>
+    <Version>1.4.1</Version>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Authors>Lucas Simas</Authors>
     <Description>A library used to control your mouse and keyboard programmatically in .NET Core</Description>
@@ -9,11 +9,13 @@
     <RepositoryUrl>https://github.com/lucassklp/Desktop.Robot</RepositoryUrl>
     <PackageIcon>logo.mini.png</PackageIcon>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
 
   <ItemGroup>
     <None Include="..\LICENSE" Pack="true" PackagePath="\" />
     <None Include="..\Resources\logo.mini.png" Pack="true" PackagePath="\" />
+    <None Include="..\README.md" Pack="true" PackagePath="\" />
   </ItemGroup>
 
   <ItemGroup>
