--- a/Desktop.Robot.TestApp/Desktop.Robot.TestApp.fsproj
+++ b/Desktop.Robot.TestApp/Desktop.Robot.TestApp.fsproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <WarnOn>3390;$(WarnOn)</WarnOn>
   </PropertyGroup>
   <ItemGroup>
@@ -19,5 +19,6 @@
     <PackageReference Include="Expecto.Diff" Version="9.0.4" />
     <PackageReference Include="Expecto.FsCheck" Version="9.0.4" />
     <PackageReference Include="FSharp.Control.Reactive" Version="5.0.5" />
-  </ItemGroup>
+    <PackageReference Include="System.Reactive" Version="6.0.1" />
+    </ItemGroup>
 </Project>
